--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -273,6 +273,7 @@
     <dimen name="detailed_information_padding_top_left_right">24dp</dimen>
     <dimen name="detailed_information_height">50dp</dimen>
     <dimen name="detailed_information_text_size">17dp</dimen>
+    <dimen name="detailed_warning_remove_warning_button_text_margin_right">16dp</dimen>
 
     <!-- Detailed task -->
     <dimen name="detailed_information_warning_padding">4dp</dimen>
