--- a/app/src/main/res/drawable/case_overview_case_list_progress_background.xml
+++ b/app/src/main/res/drawable/case_overview_case_list_progress_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners android:radius="3dp" />
-    <solid android:color="@color/green"/>
+    <solid android:color="@color/listview_taskcase_progress_background_color"/>
 </shape>
