--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -358,4 +358,14 @@
     <!-- Display image -->
     <dimen name="display_image_actionbar_title_text_size">16dp</dimen>
 
+    <!-- Confirm dialog -->
+    <dimen name="confirm_dialog_width">500dp</dimen>
+    <dimen name="confirm_dialog_height">300dp</dimen>
+    <dimen name="confirm_dialog_text_padding_top_bottom">20dp</dimen>
+    <dimen name="confirm_dialog_text_text_size">30dp</dimen>
+    <dimen name="confirm_dialog_button_corner_radius">2dp</dimen>
+    <dimen name="confirm_dialog_button_width">150dp</dimen>
+    <dimen name="confirm_dialog_button_height">60dp</dimen>
+    <dimen name="confirm_dialog_button_text_size">25dp</dimen>
+
 </resources>
