--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -20,8 +20,29 @@
         android:textSize="@dimen/confirm_dialog_text_text_size"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/confirm_dialog_ok_button"
-        style="@style/ConfirmDialogButtonStyle.OK" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/confirm_dialog_cancel_button"
+            style="@style/ConfirmDialogButtonStyle.Cancel"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/confirm_dialog_complete_button"
+            style="@style/ConfirmDialogButtonStyle.Complete"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/confirm_dialog_ok_button"
+            style="@style/ConfirmDialogButtonStyle.OK"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
