--- a/app/src/main/res/layout/main_information_list_delay_item.xml
+++ b/app/src/main/res/layout/main_information_list_delay_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:minHeight="@dimen/main_information_list_item_min_height"
     android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="?selectableItemBackground">
 
     <TextView
         android:id="@+id/main_information_list_title_delay_time"
