Revert "[MainInfo] Show detailed-worker page when we click worker item in leaved list"
This reverts commit b8911a9e602b05e6789c51915e16fd027a71f466.

--- a/app/src/main/res/layout/main_information_list_leave_item.xml
+++ b/app/src/main/res/layout/main_information_list_leave_item.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:minHeight="@dimen/main_information_list_item_min_height"
     android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:background="?selectableItemBackground">
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/main_information_list_leave_type"
