[Login] Add company domain

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,32 +34,52 @@
         android:background="@color/button_white_text_color"
         android:padding="10dp"
         android:orientation="vertical">
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/login_company_domain"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:inputType="textEmailAddress"
+                android:hint="@string/login_company_domain"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/login_account_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="textEmailAddress"
                 android:hint="@string/login_account"/>
+
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/login_password_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:inputType="textPassword"
                 android:hint="@string/login_password"/>
+
         </android.support.design.widget.TextInputLayout>
+
         <Button
             android:id="@+id/login_button"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="@string/login"/>
+
     </LinearLayout>
 
 </RelativeLayout>
